hopefully fix mobile alignment issues

--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
 body {
 	background-color: #574d4f;
-	background: url("columns.jpg")no-repeat;
-	background-size: auto 100%;
-	background-position: 50% 40%;
+	background: url("columns.jpg")no-repeat center center;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	position: fixed;
 }
 
 .content {
+	margin-top: 20%;
 	background-color: RGBA(87, 77, 79, 0.6);
-	position: absolute;
-	top: 10%;
-	left: 50%;
-	margin-left: -225px;
-	width: 450px;
-
 	color: #f89939;
 	font-weight: black;
 	font-family: Outage;
@@ -21,20 +18,8 @@ body {
 }
 
 .logo {
-	display: block;
-	margin: auto;
-	width: 400px;
-	height: 400px;
+	width: 100%;
 }
-
-.btn-transparent {
-	background-color: transparent!important;
-	margin: 5px;
-	border-style: solid!important;
-	border-width: 1px: border-color: white;
-	font-family: Outage;
-}
-
 
 .btn-large {
 	color: #f89939;
@@ -43,8 +28,6 @@ body {
 
 a {
 	color: black;
-	text-decoration: none;
-	font-family: Outage;
 }
 
 @font-face {
